MVP. User cannot add an empty string to the list. Fixed an error due to toggleCompleted being called from the div and not the list item. Added lots of styling.

--- a/src/less/App.less
+++ b/src/less/App.less
@@ -1,6 +1,18 @@
-.chassis {
-  border: 1px solid grey;
+.container {
+  border-radius: 8px;
   margin: 20px;
-  width: 454px;
-  height: 595px;
+  padding: 20px;
+  border: 7px dashed #ffd380;
+  background-color: #80ffcc;
+  color: #ff9380;
+  width: 100%;
+  //min-height: 400px;
+  user-select: none;
+}
+
+h1 {
+  color: #a680ff;
+  font-size: 3.9em;
+  font-weight: 400;
+  margin-bottom: 10px;
 }
