--- a/src/less/main.less
+++ b/src/less/main.less
@@ -6,7 +6,6 @@
 @import "./variables.less";
 @import "./global.less";
 @import "./App.less";
-
-p[completed="true"] {
-  text-decoration: line-through;
-}
+@import "./TodoForm.less";
+@import "./TodoList.less";
+@import "./Todo.less";
