--- a/src/less/main.less
+++ b/src/less/main.less
@@ -1,5 +1,5 @@
 // To run less-watch-compiler:
-// 1. In the terminal, navigate to /s/cjfos/Documents/Coding/git/React-UI-Components/Project-II-Calculator/calculator/src
+// 1. In the terminal, navigate to /s/cjfos/Documents/Coding/git/<PROJECT-NAME>/<FOLDER WHERE LESS AND CSS FOLDER WILL LIVE>
 // 2. In the terminal, execute: less-watch-compiler less css main.less
 
 @import "./reset.less";
